[tool.poetry]
name = "drf-webhooks"
version = "0.1.0"
description = "Setup webhooks using existing DRF Serializers"
authors = ["Arnar Yngvason <arnar@reon.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
inflection = "^0.5.1"
django-better-admin-arrayfield = "^1.4.2"
swapper = "^1.3.0"
httpx = "^0.23.3"
pendulum = "^2.1.2"
pytimeparse = "^1.1.8"
djangorestframework-xml = "^2.0.0"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"
pytest-httpx = "^0.21.3"
ipython = "^8.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--vcr-record-mode=none --ds=conf.settings.test"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore::cryptography.utils.CryptographyDeprecationWarning",
]
markers = [
  "integration",
]

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "webhooks,example"
line_length = 79
multi_line_output = 3

[tool.black]
target_version = ["py310"]
line-length = 120
skip-string-normalization = 1
include = "\\.pyi?$"
exclude = """
/(\\.git/
  |\\.eggs
  |\\.hg
  |__pycache__
  |\\.cache
  |\\.ipynb_checkpoints
  |\\.mypy_cache
  |\\.pytest_cache
  |\\.tox
  |\\.venv
  |_build
  |buck-out
  |build
  |dist
  |media
  |templates
  |locale
)/
"""
